Improved: Fixing defects reported by FindBugs, package org.apache.ofbiz.order.order. (OFBIZ-10056)
Thanks Julian Leichert for reporting and providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1818291 13f79535-47bb-0310-9956-ffa450edef68